package ddsGrupo1.entidades;

public enum MedioDeTransporte {
    COLECTIVO, SUBTE, TREN, ECOBICI
}
