package ddsGrupo1.establecimientos;

public class Estacion {
}
