package dominio.Localizacion;

public abstract class Localizacion {
    String nombre;
    double latitud;
    double longitud;
}
