package dominio.servicios;

public class Ascensor extends MedioElevacion {
}
