package dominio.servicios;

public class EscaleraMecanica extends MedioElevacion {
}
