@startuml
'https://plantuml.com/class-diagram

package Entidades{

    class Organizacion{
        nombre:String
        sucursales: List<Sucursal>
    }

    class RepoOrganizacion{
        instance: RepoOrganizacion
        organizaciones: List<Organizacion>
        getInstance(): RepoOrganizacion
        agregar(organizacion)
        obtenerPorNombre():Organizacion
    }

    class ServicioTransporte{
        tipo: MedioDeTransporte
        lineaDeTransporteIda: Linea
        lineaDeTransporteVuelta: Linea
    }

    class RepoServiciosDeTransporte{
        instance: RepoServiciosDeTransporte
        serviciosDeTransporte: List<ServicioTransporte>
        getInstance(): RepoServiciosDeTransporte
        agregar(servicioDeTransporte)
        obtenerPorTipo():ServicioTransporte
    }

    enum MedioDeTransporte{
        SUBTERRANEO
        FERROCARRIL
    }

    class Linea{
        nombre:String
        estacionOrigen:Estacion
        estacionDestino:Estacion
        estaciones:List<Estacion>
        localizaciones: List<Localizacion>
    }

    ServicioTransporte --> MedioDeTransporte
    ServicioTransporte --> Linea
    ServicioTransporte --> Linea
    RepoOrganizacion -down->"*" Organizacion
    RepoServiciosDeTransporte -up->"*" ServicioTransporte
}

package Establecimientos {

  class Sucursal{
     nombre: String
     localizacion: Localizacion
     servicios: List<Servicio>
  }

  class Estacion{
     nombre:String
     servicios:List<Servicio>
     localizacion: Localizacion
     agrupaciones:List<Agrupacion>
     serviciosFaltantes():List<Servicio>
  }
}


package Servicios {
  class RepoServicios{
      servicios:List<Servicio>
      serviciosQueFatan(List<Servicio>):List<Servicio>
  }
  class Agrupacion{
      serviciosAgrupados:List<Servicio>
  }
  abstract class Servicio{
  }

  abstract class MediosDeElevacion{
    tramoRecorrido:TramoMedioDeElevacion
  }

  enum TramoMedioDeElevacion{
    CALLE_A_ACCESO
    ACCESO_A_ANDEN
  }

  class Ascensor{
  }

  class EscaleraMecanica{
  }

  class Banio{
    tipoBanio:TipoBanio
  }

  enum TipoBanio{
    HOMBRES
    MUJERES
  }

'Relaciones de servicios
    RepoServicios -->"*" Servicio
    Estacion -->"*" Servicio
    Estacion -->"*" Agrupacion
    Agrupacion -right->"*" Servicio
    MediosDeElevacion -up-|> Servicio
    MediosDeElevacion --> TramoMedioDeElevacion
    Ascensor -up-|> MediosDeElevacion
    EscaleraMecanica -up-|> MediosDeElevacion
    Banio -up-|> Servicio
    Banio -down-> TipoBanio
}

package Comunidades{
    class Comunidad{
        miembros:List<Miembro>
        administradores: List<Usuario>
    }
    class Miembro{
        nombre:String
        apellido:String
        correoElectronico:String
        interes: Interes
        localizacion: Localizacion
    }

    class RepoMiembros{
        instance: RepoMiembros
        miembros:List<Miembro>
        getInstance(): RepoMiembros
        agregar(miembro)
        getMiembro():Miembro
    }

    class Interes{
    servicios: List<Servicio>
    }

    RepoMiembros -right->"*" Miembro
    Comunidad -left->"*" Miembro
}
package ClasesTecnicas{
    abstract class Usuario{
        usuario: String
        contrasenia: String
    }

    class Validador{
        minCaracteres: Int
        minMayusc: Int
        minMinusc: Int
        minDigitos: Int
        minEspeciales: Int
        instance: Validador

        getInstance(): Validador
        cumpleMinusculas(contrasenia):Void
        cumpleMayusculas(contrasenia):Void
        cumpleMinDigitos(contrasenia):Void
        cumpleMinEspeciales(contrasenia):void
        esDigitoEspecial(caracter):Boolean
        noestaEntreLasTop10Mil(contrasenia)): void
    }

      class IntegradorCSV{
            instance: IntegradorCSV
            getInstance(): IntegradorCSV
            extraerDesde(file): List<String[]>
            transformaYCarga(): void
            convertirtransporte(medioTransporte): MedioDeTransporte
        }

      class "RepoOrganizacion" as CopiaRepoOrg{
      }
      class "RepoServiciosDeTransporte" as CopiaRepoTransporte{
      }
      class "RepoMiembros" as CopiaRepoMiembros{
      }
      class "RepoEntidadesPropietarias" as CopiaRepoEntidadesPropietarias{
      }

    IntegradorCSV .down.> CopiaRepoOrg
    IntegradorCSV .down.> CopiaRepoTransporte
    IntegradorCSV .down.> CopiaRepoMiembros
    IntegradorCSV .down.> CopiaRepoEntidadesPropietarias
    Miembro-down---|>Usuario
    Miembro ....> Validador
    Comunidad -->"*" Usuario
}


package Empresas/Organismos{
    class EntidadPropietaria{
    nombre:String
    organizaciones:List<Organizacion>
    serviciosTransporte: List<ServicioTransporte>
    responsable:Usuario
}

class RepoEntidadesPropietarias{
    instance: RepoEntidadesPropietarias
    entidadesPropietarias:List<EntidadPropietaria>

    getInstance(): RepoEntidadesPropietarias
    agregar(entidadPropietaria)
    getEntidadesPropietarias():List<EntidadPropietaria>
}

class OrganismoDeControl{
    nombre:String
    organizaciones:List<Organizacion>
    serviciosTransporte: List<ServicioTransporte>
    responsable:Usuario
}

class RepoOrganismosDeControl{
    instance: RepoOrganismosDeControl
    organismosDeControl:List<OrganismoDeControl>

    getInstance(): RepoOrganismosDeControl
    agregar(organismoDeControl
}
}
package Localizacion{
    abstract class Localizacion {
    nombre:String
    latitud:double
    longitud:double
    }

    class Municipio{
        provincia: Provincia
    }

    class Provincia{}

    class Departamento{
        provincia: Provincia
    }
}


Miembro-up->Localizacion
Municipio-up-|>Localizacion
Provincia-up-|>Localizacion
Departamento-up-|>Localizacion
Municipio-left->Provincia
Departamento-right->Provincia

Linea-right->"*"Localizacion
Sucursal-right->Localizacion
Sucursal-->"*"Servicio
Estacion------>Localizacion

Miembro-->Interes
Interes-up->"*"Servicio

EntidadPropietaria-up->"*"Organizacion
EntidadPropietaria-->"*"ServicioTransporte
EntidadPropietaria-down->Usuario
OrganismoDeControl-->"*"Organizacion
OrganismoDeControl-->"*"ServicioTransporte
OrganismoDeControl-up---->Usuario

RepoEntidadesPropietarias-->"*"EntidadPropietaria
RepoOrganismosDeControl-->"*"OrganismoDeControl

Estacion..>RepoServicios
Organizacion -->"*" Sucursal
Linea --> Estacion
Linea --> Estacion
Linea -->"*" Estacion

@enduml